HookChangeValidationTest has been fixed.